--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "node app.jsx"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "firebase": "^10.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
